# libbuddy

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.in  README.md  autogen.bash  configure.ac  doxygen.cfg
debian/: changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  libbuddy.cron.d.ex  libbuddy.default.ex  libbuddy.doc-base.EX  libbuddy.install  libbuddy1-dev.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shlibs.local.ex  watch.ex
doc/: example.c
doc/examples/: basic.c
examples/: buddy_color.c
pkg-config/: Makefile.am  lib-buddy.pc.in  libbuddy.pc.in
src/: Makefile.am  buddy.c  buddy.h  protocol.c  protocol.h
